@@ -1,3 +1,7 @@
+* Minor enhancements
+
+  * Added application_port_for_selenium to webrat configuration. The use case is when you want to test through a web server sitting in front of your application server. (Luke Melia)
+
 == 0.7.0 / 2010-01-17
 
 * Major enhancements
